err.out
eos.cpp: In constructor 'eos::eos()':
eos.cpp:668:22: error: 'o2scl_mks' is not a class, namespace, or enumeration
  668 |         ("kg","1/fm",o2scl_mks::mass_neutron),2.0);
      |                      ^~~~~~~~~
eos.cpp:670:21: error: 'o2scl_mks' is not a class, namespace, or enumeration
  670 |        ("kg","1/fm",o2scl_mks::mass_proton),2.0);
      |                     ^~~~~~~~~
eos.cpp:678:16: error: 'o2scl_mks' is not a class, namespace, or enumeration
  678 |   ("kg","1/fm",o2scl_mks::mass_neutron),2.0);
      |                ^~~~~~~~~
eos.cpp:680:16: error: 'o2scl_mks' is not a class, namespace, or enumeration
  680 |   ("kg","1/fm",o2scl_mks::mass_proton),2.0);
      |                ^~~~~~~~~
eos.cpp:688:16: error: 'o2scl_mks' is not a class, namespace, or enumeration
  688 |   ("kg","1/fm",o2scl_mks::mass_electron),2.0);
      |                ^~~~~~~~~
eos.cpp:690:19: error: 'o2scl_mks' is not a class, namespace, or enumeration
  690 |      ("kg","1/fm",o2scl_mks::mass_muon),2.0);
      |                   ^~~~~~~~~
eos.cpp: In member function 'int eos::table_Ye(std::vector<std::__cxx11::basic_string<char> >&, bool)':
eos.cpp:1867:3: error: 'calculator' was not declared in this scope
 1867 |   calculator calc;
      |   ^~~~~~~~~~
eos.cpp:1870:3: error: 'calc' was not declared in this scope; did you mean 'calloc'?
 1870 |   calc.compile(nB_grid_spec.c_str());
      |   ^~~~
      |   calloc
eos.cpp: In member function 'int eos::table_nB(std::vector<std::__cxx11::basic_string<char> >&, bool)':
eos.cpp:1963:3: error: 'calculator' was not declared in this scope
 1963 |   calculator calc;
      |   ^~~~~~~~~~
eos.cpp:1966:3: error: 'calc' was not declared in this scope; did you mean 'calloc'?
 1966 |   calc.compile(Ye_grid_spec.c_str());
      |   ^~~~
      |   calloc
eos.cpp: In member function 'int eos::table_full(std::vector<std::__cxx11::basic_string<char> >&, bool)':
eos.cpp:2024:3: error: 'calculator' was not declared in this scope
 2024 |   calculator calc;
      |   ^~~~~~~~~~
eos.cpp:2027:3: error: 'calc' was not declared in this scope; did you mean 'calloc'?
 2027 |   calc.compile(nB_grid_spec.c_str());
      |   ^~~~
      |   calloc
eos.cpp: In member function 'int eos::test_eg(std::vector<std::__cxx11::basic_string<char> >&, bool)':
eos.cpp:3682:3: error: 'calculator' was not declared in this scope
 3682 |   calculator calc;
      |   ^~~~~~~~~~
eos.cpp:3685:3: error: 'calc' was not declared in this scope; did you mean 'calloc'?
 3685 |   calc.compile(nB_grid_spec.c_str());
      |   ^~~~
      |   calloc
make: *** [makefile:144: eos_nompi.o] Error 1
